# python-project-template

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  codecov.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  pypi.yml
doc/: api.rst  conf.py  further.md  index.rst  input.md  method.md  parameters.md  sphinxdoc.md
doc/source/: conf.py  index.rst  license_link.md  modules.rst  mypackage.rst  readme_link.md  transform.rst
src/: main.py  test_transform.py  transform.py
src/mypackage/: main.py  test_transform.py  transform.py
src/your_project/: __init__.py
tests/: test_your_project.py
